# Generalist-Generative-Agent

./: .gitignore  LICENSE  README.md  pyproject.toml  run_step1_metaphor_agent.py  run_step2_interpretation_agent.py  run_step3_gh_code_agent.py  run_step3a_render.py  run_step4_eval_agent.py
output/experiment_data/00_metaphors_list/: metaphors_to_expand.txt
output/experiment_data/01_metaphors_expanded/: 0001_house_within_a_house.json  0002_cubic_nest.json  0003_a_labyrinth_of_blocks.json  0004_interlocking_layers.json  0005_distorted_puzzle.json  0006_box_in_a_cloud.json  0007_rippled_grid.json  0008_branching_network_shell.json  0009_cantilevering_corners.json  0010_mirrored_folded_planes.json  0011_shifted_grid.json  0012_twisted_volumes.json  0013_split_void.json  0014_porous_fractured_monolith.json  0015_suspended_intersecting_assembly.json  0016_curved_partitions.json  0017_cascading_frames.json  0018_perforated_vertical_landscape.json  0019_subterranean_cavern.json  0020_stacked_forests.json
output/experiment_data/02_interpretations/: 0001_0001_house_within_a_house.json  0001_0002_house_within_a_house.json  (+98 more)
rhino-gh-environment/: geometric_environment.gh
rhino-gh-environment/gh_components/: component_background_task.py  component_obj_str.py  component_udp_sender.py  udp_listener_task.py
ria/agents/: __init__.py  evaluation.py  gh_code_agent.py  interpretation.py  metaphor.py
ria/prompts/: __init__.py  evaluation.md  gh_code.md  interpretation.md  metaphor.md
ria/utils/: __init__.py  file_utils.py  text_utils.py
ria/visualization/: batch_ops.py
(+5289 files in other folders)
